<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout3"
        style="@style/bg1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:scrollX="0.5dp"
        android:scrollY="0.5dp"
        tools:context=".entry0Fragment"
        tools:layout_editor_absoluteY="1dp">

        <!-- TODO: Update blank fragment layout -->

        <TextView
            android:id="@+id/textView2"
            style="@style/bg2"
            android:layout_width="match_parent"
            android:layout_height="207dp"
            android:fontFamily="@font/racing_sans_one"
            android:text="@string/u"
            android:textAlignment="center"
            android:textSize="60dp"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_conversion_absoluteHeight="176dp"
            tools:layout_conversion_absoluteWidth="432dp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="528dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:layout_editor_absoluteX="13dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="200dp">

                <Button
                    android:id="@+id/buttonn"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:fontFamily="@font/marko_one"
                    android:text="@string/text1" />

                <Button
                    android:id="@+id/button12"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:fontFamily="@font/marko_one"
                    android:text="@string/text4" />

                <Button
                    android:id="@+id/button13"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:fontFamily="@font/marko_one"
                    android:text="@string/text5" />

                <Button
                    android:id="@+id/button14"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:fontFamily="@font/marko_one"
                    android:text="@string/text6" />

                <Button
                    android:id="@+id/button15"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:fontFamily="@font/marko_one"
                    android:text="@string/text7" />

                <Button
                    android:id="@+id/button16"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:fontFamily="@font/marko_one"
                    android:text="@string/text8" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:fontFamily="@font/marko_one"
                    android:text="@string/t1" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:fontFamily="@font/marko_one"
                    android:text="@string/t5" />

                <Button
                    android:id="@+id/button4"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:fontFamily="@font/marko_one"
                    android:text="@string/t3" />

                <Button
                    android:id="@+id/button5"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:fontFamily="@font/marko_one"
                    android:text="@string/t4" />

            </LinearLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>