<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout4"
    style="@style/bg4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".entry3Fragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/textView4"
        style="@style/NameStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/margarine"
        android:text="@string/SnowLeopard"
        android:textAlignment="center"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="413dp"
                android:layout_height="317dp"
                android:contentDescription="@string/Blackbuck"
                android:src="@drawable/snow"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="16dp" />

            <TextView
                android:id="@+id/textView6"
                style="@style/NameStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="300sp"
                android:text="@string/leopard"
                android:textAlignment="textStart"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/imageView2"
                tools:layout_editor_absoluteX="16dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>